--- a/daftar-pustaka.bib
+++ b/daftar-pustaka.bib
@@ -1,3 +1,42 @@
+@misc{TOGAF_Standard_10th,
+  author = {{The Open Group}},
+  title = {{The TOGAF Standard, 10th Edition}},
+  howpublished = {\url{https://pubs.opengroup.org/togaf-standard/}},
+  year = {2025},
+  url = {https://pubs.opengroup.org/togaf-standard/}
+}
+
+@article{ghiffari2022evaluasi,
+  title={Evaluasi Tata Kelola Teknologi Informasi PT Pertamina Hulu Energi Menggunakan Framework COBIT 4.1 Fokus Domain Plan and Organise (PO) dan Acquire and Implement (AI) Khusus pada Implementasi Enterprise Achitecture},
+  author={Ghiffari, Muhammad and Mursityo, Yusi Tyroni and Suprapto, Suprapto},
+  journal={Jurnal Teknologi Informasi dan Ilmu Komputer},
+  volume={9},
+  number={5},
+  pages={1019--1028},
+  year={2022}
+}
+
+@article{foorthuis2016theory,
+  title={A theory building study of enterprise architecture practices and benefits},
+  author={Foorthuis, Ralph and Van Steenbergen, Marlies and Brinkkemper, Sjaak and Bruls, Wiel AG},
+  journal={Information Systems Frontiers},
+  volume={18},
+  number={3},
+  pages={541--564},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{nugroho2016enterprise,
+  title={Enterprise Architecture Characteristics in Context Enterprise Governance Base On COBIT 5 Framework},
+  author={Nugroho, Heru and Herawan, Tutut},
+  journal={Indonesian Journal of Electrical Engineering and Computer Science},
+  volume={3},
+  number={1},
+  pages={240--248},
+  year={2016}
+}
+
 @article{juraida2024enterprise,
   title={Enterprise Architecture As An Enabler Of Digital Transformation In The Government Sector: Success Factors And Maturity Evaluation Methodology},
   author={Juraida, Erni and Sensuse, Dana Indra},
