update Bab I Bab II

--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -125,7 +125,7 @@ Tujuan utama dari EAMM adalah untuk menyediakan alat ukur yang sistematis dalam 
 Dengan memahami tingkat kematangan EA, organisasi dapat merencanakan langkah perbaikan yang lebih terarah, memastikan keselarasan antara strategi bisnis dan teknologi informasi, serta meningkatkan nilai tambah EA terhadap pengambilan keputusan manajerial \autocite{jager2023getting}.
 
 \subsection{Tingkatan \textit{Maturity Model}}
-Berdasarkan \textit{TOGAF Architecture Maturity Models}, penilaian EAMM dilakukan untuk memahami sejauh mana kapabilitas arsitektur telah diterapkan, dikelola, dan diintegrasikan dalam organisasi.
+Berdasarkan \textit{TOGAF Architecture Maturity Models}, penilaian EAMM dilakukan untuk memahami sejauh mana kapabilitas arsitektur telah diterapkan, dikelola, dan diintegrasikan dalam organisasi \autocite{TOGAF_Standard_10th}.
 Tabel \ref{tbl:EAMM} menunjukkan menyajikan \textit{maturity level} pada masing-masing dimensi sehingga memberikan gambaran komprehensif mengenai posisi kapabilitas arsitektur saat ini serta arah peningkatan yang diperlukan.
 
 \begin{landscape}
