--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -203,31 +203,74 @@ Berdasarkan hasil identifikasi masalah dan \textit{gap analysis} dalam implement
 Dalam upaya memperbaiki \textit{EA Governance} Paragon Corp, terdapat tiga pilihan solusi yang dapat dipertimbangkan agar pengelolaan perubahan dan inisiatif digital berjalan lebih terarah serta efektif.
 \begin{enumerate}
   \item \textit{EA Governance} Berbasis PMBOK dan TOGAF \\
-  Solusi pertama mengusulkan penggunaan kombinasi kerangka PMBOK dan TOGAF untuk membangun tata kelola arsitektur perusahaan yang lebih terarah dan terstandar. PMBOK menawarkan struktur lima tahap utama, yaitu \textit{initiating, planning, executing, monitoring and controlling,} and \textit{closing}.
-  Sementara itu, TOGAF melengkapi dengan prinsip dan siklus pengembangan arsitektur yang selaras dengan tujuan organisasi. Pilihan ini didasarkan pada luasnya adopsi kedua kerangka tersebut di berbagai industri global sebagai \textit{best practice} pengelolaan proyek dan \textit{enterprise architecture}. \\
+  Alternatif solusi berbasis PMBOK dan TOGAF merupakan solusi yang mengintegrasikan kedua konsep kerangka kerja tersebut.
+  Dalam kerangka kerja PMBOK menyediakan alur manajemen proyek yang dimulai dari\textit{initiating, planning, executing, monitoring and controlling,} dan \textit{closing}.
+  Sementara itu, TOGAF menyediakan tata kelola EA dalam siklus \textit{Architecture Development Method} (ADM).
+  Penggabungan kedua framework ini akan menghasilkan alur dan memastikan kesesuaian proyek dengan teknologi informasi dan bisnis. \\
 
-  Kerangka ini membawa keunggulan berupa disiplin dokumentasi yang kuat, proses yang mudah diawasi, serta peluang audit yang jelas. Standarisasi alur juga menciptakan keteraturan sehingga setiap kegiatan transformasi digital selaras dengan strategi dan tujuan awal organisasi. Sementara itu, untuk kekurangannya
-  terjadi pada organisasi yang belum matang dalam tata kelola, penerapan penuh bisa terasa memberatkan, baik dari sisi waktu, biaya, maupun sumber daya manusia. Organisasi harus memiliki komitmen dari manajemen, tim yang sudah terlatih dengan prinsip PMBOK dan TOGAF, serta sistem dokumentasi yang terintegrasi. 
-  Jika solusi ini diadopsi, perusahaan akan memiliki mekanisme tata kelola yang rapi, terdokumentasi, serta terukur. Organisasi lebih siap menghadapi audit, lebih mampu mengevaluasi kinerja proyek TI, serta risiko di setiap tahapan dapat dideteksi dan diminimalisasi sejak awal. \\
+  Kelebihan dari solosi ini yaitu memberikan kerangka kerja yang menyeluruh untuk organisasi dan akuntabilitas dalam tata kelola EA.
+  Namun kekurangannya berupa kompleksitas tinggi karena membutuhkan pelatihan dan penyesuaian budaya kerja yang besar agar tata kelola EA efektif.
+  Selain itu, dalam praktiknya akan membutuhkan waktu dan sumber daya yang tinggi. \\
 
   \item \textit{EA Governance} Berbasis COBIT \\
-  Solusi kedua menekankan penggunaan kerangka COBIT sebagai acuan utama dalam mengatur dan mengendalikan tata kelola arsitektur TI. Kerangka ini dirancang untuk membangun sistem pengawasan, penilaian risiko, serta pengelolaan kepatuhan yang komprehensif dalam setiap siklus perubahan maupun pengambilan keputusan terkait \textit{enterprise architecture}. 
-  COBIT diakui luas dalam literatur tata kelola IT sebagai standar yang mampu meningkatkan \textit{maturity} dan mengurangi \textit{gap} antara kebutuhan bisnis dan operasional teknologi. \\
+  Solusi kedua menekankan penggunaan kerangka kerja COBIT untuk memastikan kontrol, audit, evaluasi, dan manajemen risiko pada seluruh aktivitas TI perusahaan.
+  Dalam tata kelola EA, COBIT menawarkan struktur tata kelola yang komprehensif meliputi penetapan peran, pengelolaan risiko, penjaminan kepatuhan, dan evaluasi kinerja proses arsitektur.
+  COBIT juga menyediakan \textit{domains}, proses, dan indikator \textit{maturity}, yang menjadikan \textit{framework} ini relevan digunakan oleh perusahaan yang menargetkan tata kelola EA terukur, \textit{scalable}, dan terstandarisasi di level organisasi. \\
 
-  Keuntungan utama pendekatan ini adalah terciptanya pengendalian internal yang kuat serta mudah dilakukan audit, sehingga potensi kegagalan atau deviasi terhadap kebijakan dapat ditekan secara optimal. Selain itu, metode ini juga memberikan peta kapabilitas yang jelas dan membantu organisasi meningkatkan tingkat kematangan \textit{governance} secara terukur.
-  Sementara itu untuk kekurangannya model COBIT cenderung membutuhkan budaya tata kelola yang tinggi serta tim auditor internal yang kompeten. Birokrasi dan proses \textit{compliance} yang ketat dapat memperlambat respons terhadap perubahan kebutuhan, terutama pada organisasi yang mengutamakan adaptasi cepat.
-  Perusahaan yang menerapkan model ini akan memiliki sistem tata kelola yang sangat terjaga terhadap risiko dan kepatuhan. Hubungan antara divisi teknologi dan bisnis menjadi lebih transparan, dan tindakan perbaikan dapat langsung dieksekusi begitu ditemukan masalah di audit rutin. \\
+  Kelebihan COBIT adalah pendalaman aspek kontrol, audit, kepatuhan, dan pengelolaan risiko sehingga cocok untuk meningkatkan efisiensi tata kelola dan pengawasan kepatuhan. 
+  Namun, kekurangannya terletak pada fleksibilitas yang lebih rendah dalam menghadapi dinamika bisnis yang cepat, dan kurang mendalam di aspek pengembangan EA dibanding TOGAF, \\
 
-  \item \textit{EA Governance} Berbasis \textit{Agile} \\
-  Solusi ketiga memanfaatkan filosofi \textit{agile} untuk memperbarui dan mempercepat proses tata kelola arsitektur TI di perusahaan. Metode ini mendorong kerja sama lintas tim, penyesuaian yang fleksibel terhadap perubahan kebutuhan bisnis, serta pelaksanaan evaluasi dan perbaikan secara berkala sesuai perkembangan proyek. 
-  Agile telah banyak dipakai oleh perusahaan yang bergerak di bidang teknologi dan industri kreatif untuk meningkatkan ketanggapan serta inovasi organisasi. \\
+  \item \textit{EA Governance} Berbasis ITIL \\
+  Solusi ketiga memanfaatkan ITIL sebagai kerangka kerja untuk manajemen layanan TI yang memuat tata kelola proses seperti \textit{change management, incident/problem management}, dan \textit{configuration management}.
+  Meskipun fokus utama ITIL adalah pengelolaan layanan TI, ITIL juga mendukung tata kelola EA pada aspek operasional, pembagian peran pada pelayanan TI, dan \textit{continuous improvement}.
+  ITIL dalam proses tata kelola EA akan memperkuat sektor operasional, standar layanan, evaluasi kualitas, serta pengendalian perubahan agar tetap selaras dengan tujuan bisnis dan arsitektur. \\
 
-  Kekuatan utama model \textit{agile} adalah kemampuannya untuk cepat beradaptasi terhadap dinamika eksternal maupun perubahan internal. Kolaborasi yang intensif antartim meningkatkan kualitas output serta mempercepat waktu penyelesaian masalah. Inovasi lebih mudah diwujudkan dengan pola evaluasi dan perbaikan yang terus-menerus.
-  Sementara itu untuk kelemahan pendekatan ini yaitu \textit{agile} membutuhkan disiplin komunikasi dan koordinasi yang tinggi di antara semua anggota tim. Jika tidak dijalankan dengan baik, fleksibilitas bisa memunculkan inkonsistensi dalam dokumentasi, serta potensi \textit{overload} pada anggota tim akibat banyaknya perubahan yang harus direspons cepat.
-  Model ini akan membentuk organisasi yang lebih gesit dan responsif terhadap perubahan pasar serta tuntutan pengguna. Risiko yang muncul dapat segera diidentifikasi dan ditangani secara kolektif, namun organisasi perlu menjaga konsistensi dokumentasi dan menjaga agar hasil tetap sesuai dengan tujuan strategis. \\
+  Kelebihan ITIL adalah kemampuannya memperkuat pengelolaan layanan TI, mendorong efisiensi proses, serta meningkatkan kepuasan pengguna dan kualitas layanan organisasi. 
+  Namun, kekurangannya ITIL kurang optimal sebagai kerangka utama tata kelola EA pada level strategis bisnis dan teknologi, karena cakupan utama ITIL hanya pada operasional \textit{service management}  \\
 \end{enumerate}
 
-Tiga alternatif solusi yang telah dijelaskan sebelumnya merupakan pilihan dalam perbaikan \textit{EA Governance} Paragon Corp. Setiap solusi memiliki karakteristik, keunggulan, serta potensi tantangannya sendiri. Pada bagian berikutnya, akan dilakukan analisis penentuan solusi untuk memilih alternatif yang paling sesuai dengan kebutuhan dan tujuan organisasi.
+Tiga alternatif solusi yang telah dijelaskan sebelumnya merupakan pilihan dalam perbaikan \textit{EA Governance} Paragon Corp. 
+Setiap solusi memiliki karakteristik, keunggulan, serta potensi tantangannya sendiri. 
+Pada bagian berikutnya, akan dilakukan analisis penentuan solusi untuk memilih alternatif yang paling sesuai dengan kebutuhan dan tujuan organisasi.
 
 \subsection{Analisis Penentuan Solusi}
-To be Completed
+Untuk memilih solusi terbaik dari ketiga alternatif solusi tata kelola EA dipilih metode \textit{decision matrix}. 
+Pemilihan metode ini dikarenakan pengambilan keputusan menjadi transparan dengan menetapkan bobot numerik pada setiap kriteria.
+
+Kriteria penilaian meliputi struktur tata kelola, kemudahan implementasi, keselarasan dengan strategi bisnis, efisiensi operasional, fleksibilitas adaptasi, serta kontrol dan audit. 
+Bobot setiap kriteria diberikan berdasarkan prioritas dan dampaknya terhadap efektivitas tata kelola EA di Paragon Corp.
+
+Struktur tata kelola berbobot menjadi dasar tata kelola EA yang akan menentukan peran tanggung jawab, proses, dan pengawasan aktivitas proyek.
+Keselerasan dengan strategi bisnis memastikan proses EA mendukung tujuan jangka panjang organisasi.
+Kemudahan implementasi memastikan solusi tata kelola EA yang dipilih akan mempercepat proses, mengurangi duplikasi, dan meningkatkan produktivitas.
+Fleksibilitas adaptasi memastikan kerangka kerja relevan dengan perkembangan bisnis dan teknologi.
+Kontrol dan audit berbobot memastikan kepatuhan dan akuntabilitas proses tata kelola EA.
+
+Bobot tertinggi (20\%) diberikan untuk kriteria struktur tata kelola dan kriteria keselarasan dengan strategi bisnis karena hasil evaluasi dengan pemangku kepentingan menunjukkan
+permasalahan di Paragon Corp yaitu belum jelasnya peran dan proses tata kelola EA. 
+Tata kelola EA yang lemah akan menyebabkan risiko duplikasi sistem dan respon perubahan yang lambat.
+Bobot 15\% pada kritiria kemudahan implementasi diberikan karena keterbatasan SDM dan kesiapan adopsi kerangka kerja baru, sehingga solusi yang mudah diimplementasikan
+akan memberikan dampak yang nyata.
+
+Efisiensi operasional, fleksibilitas adaptasi, dan kontrol \& audit masing-masing mendapat bobot 15\% karena ketiganya sama penting untuk memastikan perbaikan tata kelola EA 
+akan meningkatkan kualitas layanan, beradaptasi dengan kebutuhan bisnis, dan memenuhi standar kepatuhan arsitektur perusahaan. 
+Bobot-bobot ini didasarkan pada analisis \textit{gap} terkait tata kelola EA di Paragon Corp.
+Tabel \ref{tbl:decision_matrix_EA} menunjukkan hasil dari \textit{decision matrix} dalam memilih solusi terbaik.
+
+\input{table/tabelDecisionMatrix.tex}
+
+Berdasarkan hasil \textit{decision matrix}, solusi dengan skor total tertinggi yaitu \textit{EA Governance} berbasis PMBOK dan TOGAF.
+Hal ini didasarkan karena keunggulan struktur tata kelola yang jelas, kemudahan dalam menyelaraskan dengan strategi bisnis, dan fleksibel terhadap pertumbuhan perusahaan.
+Selain itu, solusi ini akan mengatasi tantangan dokumentasi, proses, dan mengawasi tata kelola.
+
+COBIT menunjukkan aspek kontrol dan audit menjadi kelebihannya, sehingga menjadi alternatif solusi untuk perusahaan yang fokus ke tata kelola berbasis kontrol dan penilaian formal.
+Namun, fleksibilitas COBIT lebih rendah untuk organisasi yang masih berubah secara dinamis dan terus berinovasi.
+
+Sementara itu, ITIL sangat optimal dalam mendukung efisiensi pelayanan dan kualitas layanan TI di tingkat operasional.
+Namun, kerangka kerja ini kurang mampu mengakomodasi kebutuhan tata kelola EA yang bersifat strategis dan lintas domain.
+Selain itu, kerangka ini tidak mendalami pengembangan dan desain arsitektur bisnis teknologi secara menyeluruh.
+
+Dengan demikian, solusi \textit{EA Governance} berbasis PMBOK dan TOGAF dipilih menjadi model yang sesuai bagi Paragon Corp.
+Kerangka kerja ini memberikan keseimbangan antara tata kelola EA, pengelolaan arsitektur, dan kemampuan adaptasi terhadap kebutuhan perusahaan.
+Pilihan ini memungkinkan evaluasi efektivitas dan mencapai \textit{maturity governance EA} dilakukan secara objektif dan berkelanjutan.
+
